fix profile bot text aligning

--- a/AIBracket.Web/ClientApp/src/app/profile/profile.component.css
+++ b/AIBracket.Web/ClientApp/src/app/profile/profile.component.css
@@ -15,10 +15,6 @@
   padding-bottom: 10px;
 }
 
-.mat-expansion-panel-header-title {
-  width: 140px;
-}
-
 .dot-active {
   height: 25px;
   width: 25px;
@@ -55,6 +51,19 @@
   text-decoration: none;
   font-size: 20px;
   font-family: inherit;
+  padding-top: 5px;
+}
+
+.highscore {
+  padding-top: 5px;
+  position: relative;
+  left: 70%;
+  width: 50px;
+  text-align: right;
+}
+
+.game-name{
+  padding-top: 5px;
 }
 
 .add-bot-title {
